# perf-tests

dns/: ocp-run.sh  pyproject.toml
dns/cluster/: ocp-default-dns-configmap.yaml  ocp-default-dns-deployment.yaml  ocp-default-dns-svc.yaml
dns/mocks/: mock-no-raw-data.txt  small-raw-histogram.txt  small-raw.txt
dns/params/coredns/: dev.yaml
dns/py/: data.py  params.py  runner.py
dns/queries/: all-queries.txt  short.txt
