[tool.poetry]
name = "dnsperf-wrk"
version = "0.1.0"
description = ""
authors = ["Matthew F Leader <mleader@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.8"
orjson = "^3.6.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
